# routes/api.php
@@ -1,6 +1,6 @@
 <?php
 
-use App\Http\Controllers\Api\V1\CategoryController;
+use App\Http\Controllers\Api\V1\TagController;
 use App\Http\Controllers\Api\V1\GroupController;
 use Illuminate\Support\Facades\Route;
 
@@ -12,6 +12,6 @@ Route::group(['as' => 'api.v1.', 'prefix' => 'v1'], function () {
     Route::get('groups/{group}/related', [GroupController::class, 'related'])->name('groups.related');
     Route::apiResources([
         'groups' => GroupController::class,
-        'categories' => CategoryController::class,
+        'tags' => TagController::class,
     ]);
 });
